--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Freuda - Tu Compañera de Bienestar Mental" />
     <meta property="og:description" content="Un espacio seguro para tu bienestar emocional con apoyo empático y conversaciones terapéuticas en español." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://images.pexels.com/photos/3683107/pexels-photo-3683107.jpeg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@freuda_app" />
+    <meta name="twitter:image" content="https://images.pexels.com/photos/3683107/pexels-photo-3683107.jpeg" />
   </head>
 
   <body>
