Fix tab title and meta tags

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Freuda - Tu Compañera de Bienestar Mental</title>
+    <title>🧠 Freuda - Tu Compañera de Bienestar Mental</title>
     <meta name="description" content="Freuda es tu compañera digital de apoyo emocional. Un espacio seguro para expresar sentimientos y explorar emociones con empatía y comprensión." />
     <meta name="author" content="Freuda" />
     <meta name="keywords" content="salud mental, apoyo emocional, terapia online, bienestar, chatbot terapéutico, español" />
 
-    <meta property="og:title" content="Freuda - Tu Compañera de Bienestar Mental" />
+    <meta property="og:title" content="🧠 Freuda - Tu Compañera de Bienestar Mental" />
     <meta property="og:description" content="Un espacio seguro para tu bienestar emocional con apoyo empático y conversaciones terapéuticas en español." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://images.pexels.com/photos/3683107/pexels-photo-3683107.jpeg" />
+    <meta property="og:image" content="https://images.pexels.com/photos/3760067/pexels-photo-3760067.jpeg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@freuda_app" />
-    <meta name="twitter:image" content="https://images.pexels.com/photos/3683107/pexels-photo-3683107.jpeg" />
+    <meta name="twitter:image" content="https://images.pexels.com/photos/3760067/pexels-photo-3760067.jpeg" />
   </head>
 
   <body>
